# weatherlink-python

./: .gitignore  .pep8  LICENSE  README.md  requirements.txt  setup.cfg  setup.py
test-data/: sample-database-2016-04.wlk.bz2
test-scripts/: test-download.py  test-import.py
tests/data/: sample_day_wind_data_5_minute.py
tests/scripts/: http-proxy.py  test-download.py  test-import.py  test-loop-packet.py
tests/unit/: test_models.py  test_serial.py  test_utils.py
weatherlink/: __init__.py  downloader.py  importer.py  models.py  poller.py  serial.py  utils.py
weatherlink/exporter/: __init__.py  mysql.py  mysql.sql  wunderground.py
