[bdist_wheel]
python-tag=py27.py36.py37

[metadata]
license_file = LICENSE

[flake8]
exclude = .git,.env/*,docs/*,build/*,.eggs/*,*.egg-info/*
max-line-length = 120

[aliases]
test=pytest

[tool:pytest]
addopts = -s --junitxml=pytests.xml --cov-report term-missing --cov-fail-under=50 --cov=weatherlink
